//
//  AccessibilityIdentifiers.swift
//  TMDBApp
//
//  Created by Tomasz Paluch on 21/02/2025.
//

struct AccessibilityIdentifiers {
    struct PopularMovies {
        static let favouriteButton = "favouriteButton"
    }
}
